# Hands-On-AI-Engineering

./: .gitignore  CONTRIBUTING.md  README.md  openclaw.example.json
.github/: PULL_REQUEST_TEMPLATE.md  README_TEMPLATE.md
.github/ISSUE_TEMPLATE/: project_proposal.md
Financial analyst using agno and GPT-OSS coder/: README.md  financial_aagents.py  financial_agents.py  main.py  mcpmain.py  requirements.txt
OCR/image_to_structured_data/: .env.example  README.md  app.py  processor.py  requirements.txt  schemas.py
OCR/latex_formula_ocr/: README.md  app.py  requirements.txt
OCR/medical_prescription_digitizer/: .env.example  README.md  app.py  extractor.py  requirements.txt  schemas.py  validator.py
OCR/receipt_expense_tracker/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
OCR/receipt_expense_tracker/receipt_expense_tracker/: __init__.py  database.py  extractor.py  preprocessor.py
agentic-form-filler/: README.md
agentic_rag_with_o-3-mini_and_duckduckgo/: README.md  app.py  requirements.txt
agentic_rag_with_qwen_and_firecrawl/: README.md  app.py  requirements.txt
ai_agents/agent_discovery_agent/: .env.example  README.md  app.py  pyproject.toml
ai_agents/agent_discovery_agent/agent_discovery_agent/: agent.py  tools.py
ai_agents/agent_discovery_agent/agent_discovery_agent/.adk/: session.db
ai_agents/agentic-form-filler/: .env.example  README.md  app.py  llm.py  pdf_filler.py  requirements.txt  run.cmd
ai_agents/agentic_rag_system/: .env.example  README.md  main.py  rag_graph.py
ai_agents/agentic_sql_search/: README.md  agent.py  app.py  database.py
ai_agents/ai_customer_support_agent/: .env.example  README.md  app.py  requirements.txt
ai_agents/ai_debate_agent/: .env.example  README.md  app.py  debate.py  requirements.txt  test_orq.py
ai_agents/ai_travel_planning_agent/: .env.example  README.md  agents.py  app.py  requirements.txt  tools.py
ai_agents/brand_monitor_agent/: .env.example  README.md  app.py  pyproject.toml
ai_agents/brand_monitor_agent/brand_monitor_agent/: __init__.py  analyzers.py  main.py  tools.py
ai_agents/browser_automation_agent/: .env.example  README.md  agent.py  app.py  requirements.txt
ai_agents/cal_scheduling_agent/: .env.example  README.md  app.py  pyproject.toml
ai_agents/cal_scheduling_agent/cal_scheduling_agent/: agent.py  tools.py
ai_agents/competitive_intelligence_agent/: .env.example  .gitignore  README.md  agents_logic.py  main.py  pyproject.toml
ai_agents/customer_query_routing_agent/: .env.example  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml
ai_agents/customer_query_routing_agent/.streamlit/: config.toml
ai_agents/customer_query_routing_agent/customer_query_routing_agent/: __init__.py  config.py  embedder.py  orchestrator.py  resolver.py  router.py  vectorstore.py
ai_agents/customer_query_routing_agent/data/: sample_tickets.json
ai_agents/customer_query_routing_agent/scripts/: ingest_tickets.py
ai_agents/daily-news-digest/: .env.example  .gitignore  README.md  SKILL.md  requirements.txt  skill.py
ai_agents/documentation_qna_agent/: .env.example  README.md  agent_service.py  app.py
ai_agents/eagle_eye/: README.md
ai_agents/finagent/: .env  .env.example  README.md  financial_agents.py  main.py  requirements.txt
ai_agents/github_intelligence_agent/: .env.example  README.md  agent.py  app.py  pyproject.toml
ai_agents/hacker_news_newsletter_agent/: .env.example  README.md  app.py  requirements.txt  tools.py
ai_agents/hotel_finder_agent/: .env.example  README.md  app.py  pyproject.toml
ai_agents/hotel_finder_agent/hotel_finder_agent/: __init__.py  agent.py
ai_agents/job_posting_agent/: .env.example  README.md  app.py  config.py  nvidia_client.py  prompts.py  requirements.txt
ai_agents/langchain_data_agent/: .env.example  README.md  agent.py  app.py  requirements.txt
ai_agents/marketing_strategy_agent/: .env.example  README.md  app.py  pyproject.toml
ai_agents/marketing_strategy_agent/marketing_strategy_agent/: __init__.py  agents.py  crew.py  pipeline.py  tasks.py  tools.py
ai_agents/multi_agent_coding_assistant/: .env.example  README.md  agents.py  app.py
ai_agents/multi_agent_financial_analyst/: README.md  financial_analyst.py  requirements.txt
ai_agents/multi_agent_research_assistant_ag2/: .env.example  (+3 more)
ai_agents/offline_medical_agent/: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
ai_agents/offline_medical_agent/offline_medical_agent/: __init__.py  agents.py  retriever.py
ai_agents/offline_medical_agent/protocols/: anaphylaxis.md  malaria_rdt_treatment.md  oral_rehydration.md  pediatric_fever.md  wound_care.md
ai_agents/offline_medical_agent/qdrant_data/: meta.json
ai_agents/offline_medical_agent/qdrant_data/collection/clinical_protocols/: storage.sqlite
ai_agents/startup_analyst/: README.md  agent.py  app.py  pyproject.toml
ai_agents/stock_portfolio_analyst/: .env.example  .gitignore  README.md  agent.py  app.py  pyproject.toml
audio/: README.md
audio/music_explorer/: .env.example  README.md  app.py  pyproject.toml
daily-news-digest/: README.md  skill.py
eagle-eye/: .gitignore  README.md  SOUL.md
finagent/: README.md  financial_agents.py  main.py  requirements.txt
glm-ocr-pro/: app.py  ocr_local.py  requirements.txt
multi_agent_financial_analyst/: .env.example  README.md  financial_analyst.py  requirements.txt
multi_agent_research_assistant_ag2/: README.md  requirements.txt  research_assistant.py
multimodal/multimodal_rag/: .env.example  README.md  app.py  pyproject.toml  rag.py
rag_apps/clinical_rag_with_ade/: .env.example  README.md  app.py  main.py  processor.py  pyproject.toml  schemas.py
rag_apps/rag_agent_with_database_routing/: .env.example  README.md  app.py  pyproject.toml
rag_apps/rag_agent_with_database_routing/rag_agent/: __init__.py  databases.py  embeddings.py  fallback.py  pipeline.py  retriever.py  router.py
rag_apps/rock_music_rag/: .env.example  README.md  app.py  pyproject.toml  rag.py
vision_rag/: README.md  requirements.txt  utils.py
(+124 files in other folders)
