[project]
name = "receipt-expense-tracker"
version = "0.1.0"
description = "Local vision pipeline for receipt extraction and expense tracking"
requires-python = ">=3.9,<3.14"

dependencies = [
    "llama-cpp-python>=0.3.0",
    "huggingface-hub>=0.23.0",
    "Pillow>=10.0.0",
    "pandas>=2.0.0",
    "streamlit>=1.35.0",
]

[tool.setuptools.packages.find]
include = ["receipt_expense_tracker*"]
