[project]
name = "agent-discovery-agent"
version = "0.1.0"
description = "AI Agent Discovery Agent powered by Google ADK and Gemini 3 Flash"
requires-python = ">=3.10"

dependencies = [
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
]
