[project]
name = "customer-query-routing-agent"
version = "0.1.0"
requires-python = ">=3.10,<3.14"
dependencies = [
    "actian-vectorai-client>=1.0.0",
    "sentence-transformers>=3.0.0",
    "llama-cpp-python>=0.3.0",
    "huggingface-hub>=0.23.0",
    "streamlit>=1.35.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["customer_query_routing_agent*"]
