[project]
name = "stock-portfolio-analyst"
version = "0.1.0"
description = "AI-powered stock portfolio analyst using DeepSeek-V4-Flash, Agno, and YFinance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agno>=1.3.0",
    "openai>=1.0.0",
    "yfinance>=0.2.50",
    "ddgs>=0.5.0",
    "gradio>=5.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.1.1",
]
