[project]
name = "music-explorer"
version = "0.1.0"
description = "Music Explorer — Gemini-powered audio analysis, ask anything about any audio file or YouTube video"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "gradio>=5.0.0",
    "yt-dlp>=2024.0.0",
    "python-dotenv>=1.1.1",
]
