[project]
name = "multimodal-rag"
version = "0.1.0"
description = "Multimodal RAG system that ingests text, URLs, PDFs, images, audio, and video into a shared ChromaDB index and answers questions with Gemini 3 Flash"
requires-python = ">=3.10"

dependencies = [
    "google-genai>=1.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.6.0",
    "pypdf>=5.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
]
