[project]
name = "rock-music-rag"
version = "0.1.0"
description = "Rock music knowledge base with BM25 retrieval and Gemma 4 powered by the Google GenAI API"
requires-python = ">=3.10"

dependencies = [
    "google-genai>=1.0.0",
    "rank-bm25>=0.2.2",
    "wikipedia>=1.4.0",
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
]
